--- a/haproxy/templates/haproxy.jinja
+++ b/haproxy/templates/haproxy.jinja
@@ -48,6 +48,15 @@ global
 {%- if 'tune' in salt['pillar.get']('haproxy:global', {}) %}
     {{- render_list_of_dictionaries('tune', salt['pillar.get']('haproxy:global:tune'), '    ','.') }}
 {%- endif %}
+{%- if 'tune.ssl.default-dh-param' in salt['pillar.get']('haproxy:global', {}) %}
+    {{- render_list_of_dictionaries('tune.ssl.default-dh-param', salt['pillar.get']('haproxy:global:tune.ssl.default-dh-param'), '    ','.') }}
+{%- endif %}
+{%- if 'ca-base' in salt['pillar.get']('haproxy:global', {}) %}
+    {{- render_list_of_dictionaries('ca-base', salt['pillar.get']('haproxy:global:ca-base'), '    ','.') }}
+{%- endif %}
+{%- if 'crt-base' in salt['pillar.get']('haproxy:global', {}) %}
+    {{- render_list_of_dictionaries('crt-base', salt['pillar.get']('haproxy:global:crt-base'), '    ','.') }}
+{%- endif %}
 {%- if 'ssl-default-bind-ciphers' in salt['pillar.get']('haproxy:global', {}) %}
     {{- render_list_of_dictionaries('ssl-default-bind-ciphers', salt['pillar.get']('haproxy:global:ssl-default-bind-ciphers')) }}
 {%- endif %}
