--- a/haproxy/templates/haproxy.jinja
+++ b/haproxy/templates/haproxy.jinja
@@ -377,6 +377,9 @@ frontend {{ frontend.get('name', frontend_name) }}
     {%- if 'rspadds' in frontend %}
     {{- render_list_of_dictionaries('rspadd', frontend.rspadds) }}
     {%- endif %}
+    {%- if 'reqreps' in frontend %}
+    {{- render_list_of_dictionaries('reqrep', frontend.reqreps) }}
+    {%- endif %}
     {%- if 'reqadds' in frontend %}
     {{- render_list_of_dictionaries('reqadd', frontend.reqadds) }}
     {%- endif %}
