Fixed bug in haproxy.jinja that put all 'extra' lines from an extra array on the same line in the config

--- a/haproxy/templates/haproxy.jinja
+++ b/haproxy/templates/haproxy.jinja
@@ -551,7 +551,9 @@ backend {{ backend.get('name', backend_name) }}
       {%- if backend.extra is string %}
     {{ backend.extra }}
       {%- else %}
-    {%- for line in backend.extra %}  {{ line }}  {%- endfor %}
+    {%- for line in backend.extra %}
+    {{ line }}
+    {%- endfor %}
       {%- endif %}
     {%- endif %}
     {%- if 'defaultserver' in backend %}
