feat(stats): expose-fd listeners
This allows "expose-fd listeners" to be configured on stats
sockets:
https://docs.haproxy.org/2.4/configuration.html#5.1-expose-fd%20listeners

Signed-off-by: Georg Pfuetzenreuter <mail@georg-pfuetzenreuter.net>

--- a/haproxy/templates/haproxy.jinja
+++ b/haproxy/templates/haproxy.jinja
@@ -46,7 +46,7 @@ global
     daemon
 {%- endif %}
 {%- for socket, socket_config in salt['pillar.get']('haproxy:global:stats', {}).items() %}
-    stats socket {{ socket }} mode {{ socket_config.get('mode', '0600') }} level {{ socket_config.get('level', 'user') }} user {{ socket_config.get('user', 'haproxy') }} group {{ socket_config.get('group', 'haproxy') }}
+    stats socket {{ socket }} mode {{ socket_config.get('mode', '0600') }} level {{ socket_config.get('level', 'user') }} user {{ socket_config.get('user', 'haproxy') }} group {{ socket_config.get('group', 'haproxy') }}{{ ' expose-fd listeners' if socket_config.get('expose-fd listeners', False) else '' }}
 {%- endfor %}
 {%- if 'maxconn' in salt['pillar.get']('haproxy:global', {}) %}
     maxconn {{ salt['pillar.get']('haproxy:global:maxconn') }}
