feat(suse): skip directory management
On SUSE based distributions the chroot/data directory is managed
by the distribution package. Skip superfluous management and
permission overwriting through the formula states.

Signed-off-by: Georg Pfuetzenreuter <mail@georg-pfuetzenreuter.net>

--- a/haproxy/map.jinja
+++ b/haproxy/map.jinja
@@ -6,10 +6,14 @@
         'user': 'root',
         'group': 'root',
         'service': 'haproxy',
+        'manage_directories': True,
     },
     'FreeBSD': {
         'config_file': '/usr/local/etc/haproxy.conf',
         'group': 'wheel',
+    },
+    'Suse': {
+        'manage_directories': False,
     },
 }, merge=salt['pillar.get']('haproxy:lookup'), base='default') %}
 
